# identifier

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  README.md  app.py  build.sh  build_dev.sh  build_w_compose.sh  config.py  docker-compose-dev.yml  docker-compose.yml  exec.sh  nginx.conf  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  supervisord.conf  wsgi.py
api/: __init__.py
api/repositories/: IdRepository.py  IdRepositoryType.py
api/services/: IdCreator.py
errors/: BadProcessError.py  BadRepositoryError.py  IdentifierError.py  IllegalArgumentError.py  IllegalIdentifierError.py  TooManyRetriesError.py  UnsupportedOperationError.py
src/co/deability/: __init__.py
src/co/deability/identifier/: __init__.py  config.py
src/co/deability/identifier/api/: __init__.py  app.py
src/co/deability/identifier/constants/: TimeMachineType.py
src/co/deability/identifier/errors/: BadJwtError.py  BadProcessError.py  BadRepositoryError.py  BadRequestError.py  DeletedEntityError.py  EnvironmentError.py  IdentifierAlreadyExistsError.py  IdentifierError.py  IllegalArgumentError.py  IllegalIdentifierError.py  ImpossibleError.py  LockedIdentifierError.py  handling.py  (+6 more)
src/tests/: conftest.py  test_IdCreator.py  test_IdRepository.py  test_config.py  test_entity_repository.py  test_id_controller.py  test_id_creator.py  test_id_repository.py  test_repositories.py  test_uuid_repository.py
src/tests/integration/: test_entity_controller.py  test_id_controller.py
tests/: conftest.py  test_IdCreator.py  test_IdRepository.py
(+19 files in other folders)
