; Copyright © 2021 William L Horvath II
;
; Licensed under the Apache License, Version 2.0 (the "License");
; you may not use this file except in compliance with the License.
; You may obtain a copy of the License at
;
; http://www.apache.org/licenses/LICENSE-2.0
;
; Unless required by applicable law or agreed to in writing, software
; distributed under the License is distributed on an "AS IS" BASIS,
; WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
; See the License for the specific language governing permissions and
; limitations under the License.

[metadata]
name = identifier
version = v0.8.0
license = Apache License v2.0
license_files = ./LICENSE
url = https://github.com/whorvath2/identifier
download_url = https://github.com/whorvath2/identifier/archive/refs/heads/main.zip
author = Bill Horvath
author_email = bill@deability.co
description = Identifiers as a service.
long_description = See ./README.md
long_description_content_type = text/markdown
keywords = identity, identifier


[options]
packages = find:
package_dir =
    = src
install_requires =
    flask
    flask-cors
    gunicorn
    pyjwt
    cryptography
    certifi
    jsonschema
tests_require =
    pytest

[options.entry_points]
console_scripts =
    identifier_api = co.deability.identifier.api:init_app

[options.packages.find]
where = src
